# autovid

./: .env_example  .gitignore  README.md  example.py  pyproject.toml
src/autovid/: common.py  main.py  overlay.py  verint.py
tests/: test_common.py
